<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="net.jagung.dansiak3fproject.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d150">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/d150"
                android:scaleType="centerCrop"
                android:src="@drawable/banner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/primary_light"
                android:padding="@dimen/d8"
                android:text="@string/appText"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/s24"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Pengertian-->
            <android.support.v7.widget.CardView
                android:id="@+id/cardPengertian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d16"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/d8"
                    android:paddingLeft="@dimen/d16"
                    android:paddingRight="@dimen/d16"
                    android:paddingTop="@dimen/d8">
                    <ImageView
                        android:layout_width="@dimen/d50"
                        android:layout_height="@dimen/d50"
                        android:background="@color/primary_light"
                        android:padding="@dimen/d8"
                        android:src="@drawable/icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/d16"
                        android:background="@color/primary_light"
                        android:gravity="center"
                        android:padding="@dimen/d8"
                        android:text="@string/cardPengertian"
                        android:textSize="@dimen/s18"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Penyebab-->
            <android.support.v7.widget.CardView
                android:id="@+id/cardPenyebab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/d8"
                    android:paddingLeft="@dimen/d16"
                    android:paddingRight="@dimen/d16"
                    android:paddingTop="@dimen/d8">
                    <ImageView
                        android:layout_width="@dimen/d50"
                        android:layout_height="@dimen/d50"
                        android:background="@color/primary_light"
                        android:padding="@dimen/d8"
                        android:src="@drawable/icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/d16"
                        android:background="@color/primary_light"
                        android:gravity="center"
                        android:padding="@dimen/d8"
                        android:text="@string/cardPenyebab"
                        android:textSize="@dimen/s18"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Pengelompokan-->
            <android.support.v7.widget.CardView
                android:id="@+id/cardPengelompokan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/d8"
                    android:paddingLeft="@dimen/d16"
                    android:paddingRight="@dimen/d16"
                    android:paddingTop="@dimen/d8">
                    <ImageView
                        android:layout_width="@dimen/d50"
                        android:layout_height="@dimen/d50"
                        android:background="@color/primary_light"
                        android:padding="@dimen/d8"
                        android:src="@drawable/icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/d16"
                        android:background="@color/primary_light"
                        android:gravity="center"
                        android:padding="@dimen/d8"
                        android:text="@string/cardPengelompokan"
                        android:textSize="@dimen/s18"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Pembuktian-->
            <android.support.v7.widget.CardView
                android:id="@+id/cardPembuktian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/d8"
                    android:paddingLeft="@dimen/d16"
                    android:paddingRight="@dimen/d16"
                    android:paddingTop="@dimen/d8">
                    <ImageView
                        android:layout_width="@dimen/d50"
                        android:layout_height="@dimen/d50"
                        android:background="@color/primary_light"
                        android:padding="@dimen/d8"
                        android:src="@drawable/icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/d16"
                        android:background="@color/primary_light"
                        android:gravity="center"
                        android:padding="@dimen/d8"
                        android:text="@string/cardPembuktian"
                        android:textSize="@dimen/s18"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Pengobatan-->
            <android.support.v7.widget.CardView
                android:id="@+id/cardPengobatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/d8"
                    android:paddingLeft="@dimen/d16"
                    android:paddingRight="@dimen/d16"
                    android:paddingTop="@dimen/d8">
                    <ImageView
                        android:layout_width="@dimen/d50"
                        android:layout_height="@dimen/d50"
                        android:background="@color/primary_light"
                        android:padding="@dimen/d8"
                        android:src="@drawable/icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/d16"
                        android:background="@color/primary_light"
                        android:gravity="center"
                        android:padding="@dimen/d8"
                        android:text="@string/cardPengobatan"
                        android:textSize="@dimen/s18"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Tes Ishihara-->
            <android.support.v7.widget.CardView
                android:id="@+id/carTes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="onClickTes">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/d8"
                    android:paddingLeft="@dimen/d16"
                    android:paddingRight="@dimen/d16"
                    android:paddingTop="@dimen/d8">
                    <ImageView
                        android:layout_width="@dimen/d50"
                        android:layout_height="@dimen/d50"
                        android:background="@color/primary_light"
                        android:padding="@dimen/d8"
                        android:src="@drawable/icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/d16"
                        android:background="@color/primary_light"
                        android:gravity="center"
                        android:padding="@dimen/d8"
                        android:text="@string/cardTes"
                        android:textSize="@dimen/s18"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
